fix: issues with images being stretched

--- a/binge_reviews/static/css/style.css
+++ b/binge_reviews/static/css/style.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-
+.review-img
 .container {
     flex: 1;
 }
@@ -273,6 +273,7 @@ a {
     object-fit: cover;
 }
 
+
 .film-title {
     font-size: 2.5rem;
     font-family: 'Rubik', sans-serif;
@@ -353,8 +354,8 @@ a {
     font-size: 14px;
 }
 
-.img-fluid {
-    height: 300px;
+.card-img-top2 {
+    height: 600px;
     width: 100%;
 }
 
